sass/_weather.scss
#weather_tab {
  text-align: center;

  h2 {
    text-align:center;
    margin-bottom:.3em;
  }

  .forecast {
    text-align: left;
    display:inline-block;

    div {
      display:inline-block;
      text-align: center;
      margin-bottom:1.5em;

      label {
        font-family:"RobotoRegular";
        font-size:1.1em;
      }

      > * {
        display:block;
      }

      img {
        margin:-10px 0;
      }
    }
  }

  .climate_table {
    display:inline-block;
    text-align:left;

    ul {
      display:inline-block;
      text-align:center;
      margin-right:-5px;

      li:first-child {
        font-weight: bold;
        border-top:0;
      }

      li {
        //border-top:1px solid gray;
        padding:.5em 1em;
      }

      li:nth-child(2n) {
        background:#F8F8F8;
      }
    }
  }
}

